--- a/Bundesliga.html
+++ b/Bundesliga.html
@@ -74,6 +74,11 @@
         </div>
     </section>   
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -82,17 +87,17 @@
         <h3>Bayern Múnich</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/HOME.jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/HOME.jpg" alt="Camiseta Bayern Múnich" class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/AWAY (16).jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/AWAY (16).jpg" alt="Camiseta Bayern Múnich"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Camiseta Bayern Múnich"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -104,17 +109,17 @@
         <h3>Bayer Leverkusen</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/HOME.jpg" alt="Camiseta Bayer Leverkusen">
+                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/HOME.jpg" alt="Camiseta Bayer Leverkusen"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/AWAY (21).jpg" alt="Camiseta Bayer Leverkusen">
+                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/AWAY (21).jpg" alt="Camiseta Bayer Leverkusen"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/THIRD.jpg" alt="Camiseta Bayer Leverkusen">
+                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/THIRD.jpg" alt="Camiseta Bayer Leverkusen"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -126,17 +131,17 @@
         <h3>Borussia Dortmund</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/HOME.jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/HOME.jpg" alt="Camiseta Borussia Dortmund"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/AWAY (17).jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/AWAY (17).jpg" alt="Camiseta Borussia Dortmund"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/THIRD (11).jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/THIRD (11).jpg" alt="Camiseta Borussia Dortmund"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -148,12 +153,12 @@
         <h3>Eintracht Frankfurt</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/FRANKFURT/HOME.jpg" alt="Camiseta Eintracht Frankfurt">
+                <img src="Imagenes/BUNDESLIGA/FRANKFURT/HOME.jpg" alt="Camiseta Eintracht Frankfurt"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/FRANKFURT/AWAY (19).jpg" alt="Camiseta Eintracht Frankfurt">
+                <img src="Imagenes/BUNDESLIGA/FRANKFURT/AWAY (19).jpg" alt="Camiseta Eintracht Frankfurt"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -166,17 +171,17 @@
         <h3>RB Leipzig</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEIPZIG/HOME.jpg" alt="Camiseta RB Leipzig">
+                <img src="Imagenes/BUNDESLIGA/LEIPZIG/HOME.jpg" alt="Camiseta RB Leipzig"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEIPZIG/AWAY (20).jpg" alt="Camiseta RB Leipzig">
+                <img src="Imagenes/BUNDESLIGA/LEIPZIG/AWAY (20).jpg" alt="Camiseta RB Leipzig"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/LEIPZIG/THIRD (12).jpg" alt="Camiseta RB Leipzig">
+                <img src="Imagenes/BUNDESLIGA/LEIPZIG/THIRD (12).jpg" alt="Camiseta RB Leipzig"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -188,12 +193,12 @@
         <h3>Wolfsburg</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/WOLSFBURG/HOME.jpg" alt="Camiseta Wolfsburg">
+                <img src="Imagenes/BUNDESLIGA/WOLSFBURG/HOME.jpg" alt="Camiseta Wolfsburg"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/WOLSFBURG/AWAY (22).jpg" alt="Camiseta Wolfsburg">
+                <img src="Imagenes/BUNDESLIGA/WOLSFBURG/AWAY (22).jpg" alt="Camiseta Wolfsburg"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
