--- a/CopaAmerica.html
+++ b/CopaAmerica.html
@@ -79,6 +79,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -87,42 +92,42 @@
     <h3>Argentina</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 1986.jpeg" alt="Camiseta Argentina Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 1986.jpeg" alt="Camiseta Argentina Local"class="zoomable">
             <h4>Camiseta Local 86</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 1994.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 1994.jpeg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Visitante 94</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2006.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2006.jpg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Visitante 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 2006.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 2006.jpeg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Local 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2014.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2014.jpeg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Visitante 2014</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME.jpg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY.jpg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME ESPECIAL 2024.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME ESPECIAL 2024.jpg" alt="Camiseta Argentina Visitante"class="zoomable">
             <h4>Camiseta Local ESPECIAL ACTUAL</h4>
             <p>25€</p>
         </div>
@@ -134,32 +139,32 @@
     <h3>Brazil</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2002.jpeg" alt="Camiseta Brazil Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2002.jpeg" alt="Camiseta Brazil Local"class="zoomable">
             <h4>Camiseta Local 2002</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2004.jpeg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2004.jpeg" alt="Camiseta Brazil Visitante"class="zoomable">
             <h4>Camiseta Local 2004</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 06.jpeg" alt="Camiseta Brazil Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 06.jpeg" alt="Camiseta Brazil Local"class="zoomable">
             <h4>Camiseta Local 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY 2019.jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY 2019.jpg" alt="Camiseta Brazil Visitante"class="zoomable">
             <h4>Camiseta Visitante 2019</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME (19).jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME (19).jpg" alt="Camiseta Brazil Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY (30).jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY (30).jpg" alt="Camiseta Brazil Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -168,15 +173,15 @@
 
 <!-- Canada -->
 <div id="canada" class="equipo">
-    <h3>Canada</h3>
+    <h3>Canadá</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/HOME.jpg" alt="Camiseta Canada Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/HOME.jpeg" alt="Camiseta Canada Local"class="zoomable">
             <h4>Camiseta Local</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/AWAY.jpg" alt="Camiseta Canada Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/AWAY.jpg" alt="Camiseta Canada Visitante"class="zoomable">
             <h4>Camiseta Visitante</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -188,12 +193,12 @@
     <h3>Chile</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/HOME.jpg" alt="Camiseta Chile Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/HOME.jpg" alt="Camiseta Chile Local"class="zoomable">
             <h4>Camiseta Local</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/AWAY.jpg" alt="Camiseta Chile Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/AWAY.jpg" alt="Camiseta Chile Visitante"class="zoomable">
             <h4>Camiseta Visitante</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -205,22 +210,22 @@
     <h3>Colombia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO 1990.jpeg" alt="Camiseta Colombia Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO 1990.jpeg" alt="Camiseta Colombia Local"class="zoomable">
             <h4>Camiseta Local 90</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO ESPECIAL.jpeg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO ESPECIAL.jpeg" alt="Camiseta Colombia Visitante"class="zoomable">
             <h4>Camiseta ESPECIAL</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/HOME.jpg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/HOME.jpg.jpg" alt="Camiseta Colombia Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/AWAY.jpg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/AWAY.jpg" alt="Camiseta Colombia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -232,12 +237,12 @@
     <h3>Ecuador</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/HOME.jpeg" alt="Camiseta Ecuador Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/HOME.jpeg" alt="Camiseta Ecuador Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/AWAY.jpg" alt="Camiseta Ecuador Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/AWAY.jpg" alt="Camiseta Ecuador Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -249,12 +254,12 @@
     <h3>EEUU</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/HOME (20).jpg" alt="Camiseta EEUU Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/HOME (20).jpg" alt="Camiseta EEUU Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/AWAY.jpg" alt="Camiseta EEUU Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/AWAY.jpg" alt="Camiseta EEUU Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -266,12 +271,12 @@
     <h3>México</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/HOME.jpg" alt="Camiseta México Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/HOME.jpg" alt="Camiseta México Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/AWAY.jpeg" alt="Camiseta México Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/AWAY.jpeg" alt="Camiseta México Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -283,12 +288,12 @@
     <h3>Perú</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/HOME.jpg" alt="Camiseta Perú Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/HOME.jpg" alt="Camiseta Perú Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/AWAY.jpg" alt="Camiseta Perú Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/AWAY.jpg" alt="Camiseta Perú Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -300,12 +305,12 @@
     <h3>Uruguay</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/HOME.jpg" alt="Camiseta Uruguay Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/HOME.jpg" alt="Camiseta Uruguay Local"class="zoomable">
             <h4>Camiseta Loca ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/AWAY.jpeg" alt="Camiseta Uruguay Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/AWAY.jpeg" alt="Camiseta Uruguay Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -317,12 +322,12 @@
     <h3>Venezuela</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/HOME.jpeg" alt="Camiseta Venezuela Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/HOME.jpeg" alt="Camiseta Venezuela Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/AWAY.jpg" alt="Camiseta Venezuela Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/AWAY.jpg" alt="Camiseta Venezuela Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
