--- a/Hypermotion.html
+++ b/Hypermotion.html
@@ -75,6 +75,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -83,12 +88,12 @@
         <h3>Cádiz</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/HOME (12).jpg" alt="Camiseta Cádiz">
+                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/HOME (12).jpg" alt="Camiseta Cádiz"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/AWAY.jpeg" alt="Camiseta Cádiz">
+                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/AWAY.jpeg" alt="Camiseta Cádiz"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -100,12 +105,12 @@
         <h3>Deportivo de la Coruña</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/HOME.jpg" alt="Camiseta Deportivo de la Coruña">
+                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/HOME.jpg" alt="Camiseta Deportivo de la Coruña"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/AWAY.jpg" alt="Camiseta Deportivo de la Coruña">
+                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/AWAY.jpg" alt="Camiseta Deportivo de la Coruña"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -117,17 +122,17 @@
         <h3>Granada</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/HOME.jpg" alt="Camiseta Granada">
+                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/HOME.jpg" alt="Camiseta Granada"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/AWAY.jpg" alt="Camiseta Granada">
+                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/AWAY.jpg" alt="Camiseta Granada"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/THIRD (15).jpg" alt="Camiseta Granada">
+                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/THIRD (15).jpg" alt="Camiseta Granada"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -139,17 +144,17 @@
         <h3>Málaga</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/HOME (11).jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/HOME (11).jpg" alt="Camiseta Málaga"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/AWAY (25).jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/AWAY (25).jpg" alt="Camiseta Málaga"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/THIRD.jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/THIRD.jpg" alt="Camiseta Málaga"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -161,12 +166,12 @@
         <h3>Racing de Santander</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/HOME (13).jpg" alt="Camiseta Racing de Santander">
+                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/HOME (13).jpg" alt="Camiseta Racing de Santander"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/AWAY (26).jpg" alt="Camiseta Racing de Santander">
+                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/AWAY (26).jpg" alt="Camiseta Racing de Santander"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -178,12 +183,12 @@
         <h3>Real Oviedo</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/HOME (14).jpg" alt="Camiseta Real Oviedo">
+                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/HOME (14).jpg" alt="Camiseta Real Oviedo"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/AWAY (27).jpg" alt="Camiseta Real Oviedo">
+                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/AWAY (27).jpg" alt="Camiseta Real Oviedo"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -195,12 +200,12 @@
         <h3>Sporting de Gijón</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/HOME.jpg" alt="Camiseta Sporting de Gijón">
+                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/HOME.jpg" alt="Camiseta Sporting de Gijón"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/AWAY.jpg" alt="Camiseta Sporting de Gijón">
+                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/AWAY.jpg" alt="Camiseta Sporting de Gijón"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
