--- a/Ligue_1.html
+++ b/Ligue_1.html
@@ -73,6 +73,11 @@
         </div>
     </section> 
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -81,12 +86,12 @@
             <h3>Lille</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LILLE/HOME.jpeg" alt="Camiseta Lille">
+                    <img src="Imagenes/LIGUE 1/LILLE/HOME.jpeg" alt="Camiseta Lille"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LILLE/AWAY.jpg" alt="Camiseta Lille">
+                    <img src="Imagenes/LIGUE 1/LILLE/AWAY.jpg" alt="Camiseta Lille"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -98,12 +103,12 @@
             <h3>Olympique de Lyon</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LYON/HOME (10).jpg" alt="Camiseta Lyon">
+                    <img src="Imagenes/LIGUE 1/LYON/HOME (10).jpg" alt="Camiseta Lyon"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/LYON/AWAY.jpg" alt="Camiseta Lyon">
+                    <img src="Imagenes/LIGUE 1/LYON/AWAY.jpg" alt="Camiseta Lyon"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -115,12 +120,12 @@
             <h3>Olympique de Marsella</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MARSELLA/HOME.jpg" alt="Camiseta Marsella">
+                    <img src="Imagenes/LIGUE 1/MARSELLA/HOME.jpg" alt="Camiseta Marsella"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MARSELLA/AWAY.jpg" alt="Camiseta Marsella">
+                    <img src="Imagenes/LIGUE 1/MARSELLA/AWAY.jpg" alt="Camiseta Marsella"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -132,12 +137,12 @@
             <h3>AS Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MONACO/HOME.jpg" alt="Camiseta Mónaco">
+                    <img src="Imagenes/LIGUE 1/MONACO/HOME.jpg" alt="Camiseta Mónaco"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MONACO/AWAY.jpg" alt="Camiseta Mónaco">
+                    <img src="Imagenes/LIGUE 1/MONACO/AWAY.jpg" alt="Camiseta Mónaco"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -149,17 +154,17 @@
             <h3>Paris Saint-Germain (PSG)</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/HOME.jpeg" alt="Camiseta PSG">
+                    <img src="Imagenes/LIGUE 1/PSG/HOME.jpeg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/AWAY.jpg" alt="Camiseta PSG">
+                    <img src="Imagenes/LIGUE 1/PSG/AWAY.jpg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/PSG/THIRD (13).jpg" alt="Camiseta PSG">
+                    <img src="Imagenes/LIGUE 1/PSG/THIRD (13).jpg" alt="Camiseta PSG"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
