--- a/OtrasSelecciones.html
+++ b/OtrasSelecciones.html
@@ -70,6 +70,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -78,12 +83,12 @@
             <h3>Japón</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/SELECCIONES/OTRAS/JAPON/HOME.jpg" alt="Camiseta Japón Local">
+                    <img src="Imagenes/SELECCIONES/OTRAS/JAPON/HOME.jpg" alt="Camiseta Japón Local"class="zoomable">
                     <h4>Camiseta Local ACTUAL</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/SELECCIONES/OTRAS/JAPON/AWAY.jpg" alt="Camiseta Japón Visitante">
+                    <img src="Imagenes/SELECCIONES/OTRAS/JAPON/AWAY.jpg" alt="Camiseta Japón Visitante"class="zoomable">
                     <h4>Camiseta Visitante ACTUAL</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -95,12 +100,12 @@
             <h3>Marruecos</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/SELECCIONES/OTRAS/MARRUECOS/HOME.jpg" alt="Camiseta Marruecos Local">
+                    <img src="Imagenes/SELECCIONES/OTRAS/MARRUECOS/HOME.jpg" alt="Camiseta Marruecos Local"class="zoomable">
                     <h4>Camiseta Local ACTUAL</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/SELECCIONES/OTRAS/MARRUECOS/AWAY (31).jpg" alt="Camiseta Marruecos Visitante">
+                    <img src="Imagenes/SELECCIONES/OTRAS/MARRUECOS/AWAY (31).jpg" alt="Camiseta Marruecos Visitante"class="zoomable">
                     <h4>Camiseta Visitante ACTUAL</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
