--- a/RetroBundesliga.html
+++ b/RetroBundesliga.html
@@ -70,6 +70,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -78,17 +83,17 @@
             <h3>Bayern Munich</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 95-96.jpg" alt="Bayern Munich Local 95-96">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 95-96.jpg" alt="Bayern Munich Local 95-96"class="zoomable">
                     <h4>Camiseta Local 95-96</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 97-99.jpg" alt="Camiseta Bayern Munich Visitante">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME 97-99.jpg" alt="Camiseta Bayern Munich Visitante"class="zoomable">
                     <h4>Camiseta Local 97-99</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME FINAL 2013-14.jpg" alt="Camiseta Bayern Munich Alternativa">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BAYERN MUNICH/HOME FINAL 2013-14.jpg" alt="Camiseta Bayern Munich Alternativa"class="zoomable">
                     <h4>Camiseta Local Final 13-14</h4>
                     <p>25€</p>
                 </div>
@@ -100,12 +105,12 @@
             <h3>Borussia Dortmund</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/HOME 2012-13.jpg" alt="Camiseta Borussia Dortmund Local">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/HOME 2012-13.jpg" alt="Camiseta Borussia Dortmund Local"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/AWAY 96-97.jpg" alt="Camiseta Borussia Dortmund Visitante">
+                    <img src="Imagenes/RETRO/BUNDESLIGA/BORUSSIA DORTMUND/AWAY 96-97.jpg" alt="Camiseta Borussia Dortmund Visitante"class="zoomable">
                     <h4>Camiseta Visitante 96-97</h4>
                     <p>25€</p>
                 </div>
