--- a/RetroLigue1.html
+++ b/RetroLigue1.html
@@ -71,6 +71,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -79,12 +84,12 @@
             <h3>Marsella</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 90-91.jpeg" alt="Marsella Local 95-96">
+                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 90-91.jpeg" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 90-91</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 98-99.jpeg" alt="Marsella Local 95-96">
+                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 98-99.jpeg" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 98-99</h4>
                     <p>25€</p>
                 </div>
@@ -96,7 +101,7 @@
             <h3>Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96">
+                    <img src="Imagenes/RETRO/LIGUE 1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96"class="zoomable">
                     <h4>Camiseta Local 16-17</h4>
                     <p>25€</p>
                 </div>
@@ -108,12 +113,12 @@
             <h3>PSG</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2001-02.jpeg" alt="PSG Local 95-96">
+                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2001-02.jpeg" alt="PSG Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2017-18.jpg" alt="Camiseta PSG Alternativa">
+                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2017-18.jpg" alt="Camiseta PSG Alternativa"class="zoomable">
                     <h4>Camiseta Local 17-18</h4>
                     <p>25€</p>
                 </div>
