--- a/Saudí.html
+++ b/Saudí.html
@@ -71,6 +71,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -79,17 +84,17 @@
         <h3>Al Hilal</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/HOME.jpg" alt="Camiseta Al Hilal">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/HOME.jpg" alt="Camiseta Al Hilal"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/AWAY.jpg" alt="Camiseta Al Hilal">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/AWAY.jpg" alt="Camiseta Al Hilal"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/THIRD.jpg" alt="Camiseta Al Hilal">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/THIRD.jpg" alt="Camiseta Al Hilal"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -101,12 +106,12 @@
         <h3>Al Ittihad</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/HOME.jpg" alt="Camiseta Al Ittihad">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/HOME.jpg" alt="Camiseta Al Ittihad"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/AWAY.jpg" alt="Camiseta Al Ittihad">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/AWAY.jpg" alt="Camiseta Al Ittihad"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -118,17 +123,17 @@
         <h3>Al-Nassr</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/HOME.jpg" alt="Camiseta Al-Nassr">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/HOME.jpg" alt="Camiseta Al-Nassr"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/AWAY.jpg" alt="Camiseta Al-Nassr">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/AWAY.jpg" alt="Camiseta Al-Nassr"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/THIRD (14).jpg" alt="Camiseta Al-Nassr">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL NASSR/THIRD (14).jpg" alt="Camiseta Al-Nassr"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
