--- a/Serie_A.html
+++ b/Serie_A.html
@@ -77,6 +77,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -85,12 +90,12 @@
         <h3>Atalanta</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/ATALANTA/HOME.jpg" alt="Camiseta Atalanta">
+                <img src="Imagenes/SERIE A/ATALANTA/HOME.jpg" alt="Camiseta Atalanta"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ATALANTA/AWAY.jpg" alt="Camiseta Atalanta">
+                <img src="Imagenes/SERIE A/ATALANTA/AWAY.jpg" alt="Camiseta Atalanta"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -102,12 +107,12 @@
         <h3>Como</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/COMO/HOME.jpg" alt="Camiseta Como">
+                <img src="Imagenes/SERIE A/COMO/HOME.jpg" alt="Camiseta Como"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/COMO/AWAY (13).jpg" alt="Camiseta Como">
+                <img src="Imagenes/SERIE A/COMO/AWAY (13).jpg" alt="Camiseta Como"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -119,17 +124,17 @@
         <h3>Inter</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/HOME.jpg" alt="Camiseta Inter">
+                <img src="Imagenes/SERIE A/INTER MILAN/HOME.jpg" alt="Camiseta Inter"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/AWAY (11).jpg" alt="Camiseta Inter 2">
+                <img src="Imagenes/SERIE A/INTER MILAN/AWAY (11).jpg" alt="Camiseta Inter 2"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/THIRD (8).jpg" alt="Camiseta Inter">
+                <img src="Imagenes/SERIE A/INTER MILAN/THIRD (8).jpg" alt="Camiseta Inter"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -141,17 +146,17 @@
         <h3>Juventus de Turín</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/HOME (8).jpg" alt="Camiseta Juve">
+                <img src="Imagenes/SERIE A/JUVENTUS/HOME (8).jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/AWAY.jpg" alt="Camiseta Juve">
+                <img src="Imagenes/SERIE A/JUVENTUS/AWAY.jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Camiseta Juve">
+                <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Camiseta Juve"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -163,12 +168,12 @@
         <h3>Lazio</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/LAZIO/HOME.jpg" alt="Camiseta Lazio">
+                <img src="Imagenes/SERIE A/LAZIO/HOME.jpg" alt="Camiseta Lazio"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/LAZIO/AWAY.jpg" alt="Camiseta Lazio">
+                <img src="Imagenes/SERIE A/LAZIO/AWAY.jpg" alt="Camiseta Lazio"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -180,17 +185,17 @@
         <h3>Milan</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/HOME (9).jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/HOME (9).jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/AWAY (10).jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/AWAY (10).jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/MILAN/THIRD.jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/THIRD.jpg" alt="Camiseta Milan"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -202,17 +207,17 @@
         <h3>Napoli</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/HOME.jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/HOME.jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/AWAY (12).jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/AWAY (12).jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/NAPOLI/THIRD.jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/THIRD.jpg" alt="Camiseta Napoli"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -224,17 +229,17 @@
         <h3>Roma</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/HOME.jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/HOME.jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/AWAY (14).jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/AWAY (14).jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/ROMA/THIRD (9).jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/THIRD (9).jpg" alt="Camiseta Roma"class="zoomable">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -246,7 +251,7 @@
         <h3>Venezia</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/VENEZIA/HOME.jpg" alt="Camiseta Venezia">
+                <img src="Imagenes/SERIE A/VENEZIA/HOME.jpg" alt="Camiseta Venezia"class="zoomable">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
