--- a/index.html
+++ b/index.html
@@ -67,38 +67,52 @@
         <p>En está página podrás encontrar las camisetas de algunos de los equipos más conocidos.</p>
         <p>Está página es un catálogo de algunas de nuestras camisetas, para pedirlas tendrás que escribirnos un <b>mensaje directo</b> a nuestra cuenta de <b>instagram</b>.</p>
         <p><b>¡A parte de las camisetas que vas a encontrar aquí, también puedes preguntarnos por alguna camiseta que te interese!</b></p>
+        <p>Si quieres pedir el <b>chándal</b> de tu equipo favorito, escribenos por <b>Instagram.</b></p>
+        <section id="social-media2">
+            <div class="social-icons2">
+                <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+                    <img src="Imagenes/Redes sociales/INSTAGRAM.svg.png" alt="Instagram">
+                </a>
+                <a href="https://tiktok.com" target="_blank" aria-label="Tik Tok">
+                    <img src="Imagenes/Redes sociales/TIKTOK.png" alt="TiK Tok">
+                </a>
+            </div>
+        </section>
         <p>-----------------------------------------------------------------</p>
         <p>Los pagos de los pedidos se deben realizar a través de <b>PayPal</b> o por <b>transferencia bancaria</b>.</p>
         <p>Los paquetes tardan en llegar en torno a <b>10/15 días laborables</b>.</p>
         <p>Proporcionamos un <b>número de seguimiento</b> con el que se puede seguir el rastro de tu paquete.</p>
         <p>-----------------------------------------------------------------</p>
         <p><b>Disponemos de todas nuestras camisetas en versión FAN y PLAYER.</b></p>
-        <p><b>Edición PLAYER, mejor calidad.</b></p>
         <p>Nuestra recomendación: <b>Edición FAN, talla habitual. Edición PLAYER, una talla más de la talla habitual.</b></p>
-        <p>Si quieres pedir el <b>chándal</b> de tu equipo favorito, escribenos por <b>Instagram.</b></p>
     </section>
+
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
 
     <section id="inicio">
         <h2>NOVEDADES</h2>
         <div class="productos">
             <!-- Aquí debes añadir las imágenes de las 4 camisetas más vendidas -->
             <div class="producto">
-                <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/AWAY (1).jpg" alt="UNITED">
+                <img src="Imagenes/PREMIER LEAGUE/MANCHESTER UNITED/AWAY (1).jpg" alt="UNITED" class="zoomable">
                 <h3>Manchester United 24/25 AWAY</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Juventus de Turín 24/25 ALTERNATIVA">
+                <img src="Imagenes/SERIE A/JUVENTUS/THIRD (7).jpg" alt="Juventus de Turín 24/25 ALTERNATIVA" class="zoomable">
                 <h3>Juventus de Turín 24/25 ALTERNATIVA</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Bayern de Munich 24/25 ALTERNATIVA">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Bayern de Munich 24/25 ALTERNATIVA" class="zoomable">
                 <h3>Bayern de Munich 24/25 ALTERNATIVA</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="ATM 04-05">
+                <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="ATM 04-05" class="zoomable">
                 <h3>Atlético de Madrid 04/05 HOME</h3>
                 <p>25€</p>
             </div>
@@ -108,22 +122,22 @@
         <div class="productos">
             <!-- Aquí debes añadir las imágenes de las 4 camisetas más vendidas -->
             <div class="producto">
-                <img src="Imagenes/LALIGA/Real Madrid/HOME.jpg.webp" alt="Real Madrid 24/25 HOME">
+                <img src="Imagenes/LALIGA/Real Madrid/HOME.jpg.webp" alt="Real Madrid 24/25 HOME"class="zoomable">
                 <h3>Real Madrid 24/25 HOME</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LALIGA/FC Barcelona/AWAY.jpg" alt="FC Barcelona 24/25 AWAY">
+                <img src="Imagenes/LALIGA/FC Barcelona/AWAY.jpg" alt="FC Barcelona 24/25 AWAY"class="zoomable">
                 <h3>FC Barcelona 24/25 AWAY</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/PREMIER LEAGUE/CHELSEA/AWAY (2).jpg" alt="Chealsea 24/25 AWAY">
+                <img src="Imagenes/PREMIER LEAGUE/CHELSEA/AWAY (2).jpg" alt="Chealsea 24/25 AWAY"class="zoomable">
                 <h3>Chealsea 24/25 AWAY</h3>
                 <p>25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Camiseta más vendida 4">
+                <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Camiseta más vendida 4"class="zoomable">
                 <h3>Santos 11/12 HOME</h3>
                 <p>25€</p>
             </div>
