--- a/Eurocopa.html
+++ b/Eurocopa.html
@@ -81,6 +81,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -89,27 +94,27 @@
     <h3>Alemania</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 1990.jpeg" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 1990.jpeg" alt="Camiseta Alemania Local"class="zoomable">
             <h4>Camiseta Local 90</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/THIRD 98.webp" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/THIRD 98.webp" alt="Camiseta Alemania Local"class="zoomable">
             <h4>Camiseta Alternativa 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 06.jpeg" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 06.jpeg" alt="Camiseta Alemania Local"class="zoomable">
             <h4>Camiseta Local 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME.jpg" alt="Camiseta Alemania Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME.jpg" alt="Camiseta Alemania Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/AWAY.jpg" alt="Camiseta Alemania Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/AWAY.jpg" alt="Camiseta Alemania Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -121,12 +126,12 @@
     <h3>Bélgica</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/HOME.jpg" alt="Camiseta Bélgica Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/HOME.jpg" alt="Camiseta Bélgica Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/AWAY.jpg" alt="Camiseta Bélgica Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/AWAY.jpg" alt="Camiseta Bélgica Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -138,17 +143,17 @@
     <h3>Croacia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME 2002.jpg" alt="Camiseta Croacia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME 2002.jpg" alt="Camiseta Croacia Local"class="zoomable">
             <h4>Camiseta Local 2002</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME.jpg" alt="Camiseta Croacia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME.jpg" alt="Camiseta Croacia Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/AWAY.jpg" alt="Camiseta Croacia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/AWAY.jpg" alt="Camiseta Croacia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -160,12 +165,12 @@
     <h3>Dinamarca</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/HOME.jpg" alt="Camiseta Dinamarca Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/HOME.jpg" alt="Camiseta Dinamarca Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/AWAY.jpg" alt="Camiseta Dinamarca Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/AWAY.jpg" alt="Camiseta Dinamarca Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -177,17 +182,17 @@
     <h3>Escocia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME 1978.jpeg" alt="Camiseta Escocia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME 1978.jpeg" alt="Camiseta Escocia Local"class="zoomable">
             <h4>Camiseta Local 78</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME.jpeg" alt="Camiseta Escocia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME.jpeg" alt="Camiseta Escocia Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/AWAY.jpg" alt="Camiseta Escocia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/AWAY.jpg" alt="Camiseta Escocia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -199,37 +204,37 @@
     <h3>España</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 1996.jpeg" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 1996.jpeg" alt="Camiseta España Local"class="zoomable">
             <h4>Camiseta Local 96</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 98.jpg.webp" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 98.jpg.webp" alt="Camiseta España Local"class="zoomable">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 98.jpg" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 98.jpg" alt="Camiseta España Local"class="zoomable">
             <h4>Camiseta Visitante 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 2010.jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 2010.jpg" alt="Camiseta España Visitante"class="zoomable">
             <h4>Camiseta Local 2010</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 2010.jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 2010.jpg" alt="Camiseta España Visitante"class="zoomable">
             <h4>Camiseta Visitante 2010</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME (15).jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME (15).jpg" alt="Camiseta España Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY (28).jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY (28).jpg" alt="Camiseta España Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -241,27 +246,27 @@
     <h3>Francia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 98.jpg" alt="Camiseta Francia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 98.jpeg" alt="Camiseta Francia Local"class="zoomable">
             <h4>Camiseta Visitante 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME 1998.jpeg" alt="Camiseta Francia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME 1998.jpeg" alt="Camiseta Francia Local"class="zoomable">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 2006.jpeg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 2006.jpeg" alt="Camiseta Francia Visitante"class="zoomable">
             <h4>Camiseta Visitante 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME (16).jpg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME (16).jpg" alt="Camiseta Francia Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY.jpg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY.jpg" alt="Camiseta Francia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -273,12 +278,12 @@
     <h3>Georgia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/GEORGIA/GEORGIA.jpg" alt="Camiseta Georgia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/GEORGIA/GEORGIA.jpg" alt="Camiseta Georgia Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/GEORGIA/AWAY.jpg" alt="Camiseta Georgia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/GEORGIA/AWAY.jpg" alt="Camiseta Georgia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -290,17 +295,17 @@
     <h3>Inglaterra</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME 1998.jpg" alt="Camiseta Inglaterra Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME 1998.jpg" alt="Camiseta Inglaterra Local"class="zoomable">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME.jpg" alt="Camiseta Inglaterra Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME.jpg.webp" alt="Camiseta Inglaterra Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/AWAY.jpeg" alt="Camiseta Inglaterra Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/AWAY.jpeg" alt="Camiseta Inglaterra Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -312,27 +317,27 @@
     <h3>Italia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY 94.jpg" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY 94.jpg" alt="Camiseta Italia Visitante"class="zoomable">
             <h4>Camiseta Visitante 94</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 96.jpg.webp" alt="Camiseta Italia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 96.jpg.webp" alt="Camiseta Italia Local"class="zoomable">
             <h4>Camiseta Local 96</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 2012.jpg.webp" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 2012.jpg.webp" alt="Camiseta Italia Visitante"class="zoomable">
             <h4>Camiseta Local 2012</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME.jpg" alt="Camiseta Italia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME.jpg" alt="Camiseta Italia Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY.jpg" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY.jpg" alt="Camiseta Italia Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -344,17 +349,17 @@
     <h3>Países Bajos</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME 1988.jpeg" alt="Camiseta Países Bajos Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME 1988.jpeg" alt="Camiseta Países Bajos Local"class="zoomable">
             <h4>Camiseta Local 88</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME.jpeg" alt="Camiseta Países Bajos Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME.jpeg" alt="Camiseta Países Bajos Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/AWAY.jpg" alt="Camiseta Países Bajos Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/AWAY.jpg" alt="Camiseta Países Bajos Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -366,37 +371,37 @@
     <h3>Portugal</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2004.jpeg" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2004.jpeg" alt="Camiseta Portugal Local"class="zoomable">
             <h4>Camiseta Local 2004</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2012.jpeg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2012.jpeg" alt="Camiseta Portugal Visitante"class="zoomable">
             <h4>Camiseta Visitante 2012</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2016.webp" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2016.webp" alt="Camiseta Portugal Local"class="zoomable">
             <h4>Camiseta Local 2016</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME.jpg" alt="Camiseta Portugal Visitante"class="zoomable">
             <h4>Camiseta Local NIKE 2024</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY.jpg" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY.jpg" alt="Camiseta Portugal Local"class="zoomable">
             <h4>Camiseta Visitante NIKE 2024</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2025.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2025.jpg" alt="Camiseta Portugal Visitante"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2025.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2025.jpg" alt="Camiseta Portugal Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -408,12 +413,12 @@
     <h3>Suiza</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/HOME.jpg" alt="Camiseta Suiza Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/HOME.jpg" alt="Camiseta Suiza Local"class="zoomable">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/AWAY.jpg" alt="Camiseta Suiza Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/AWAY.jpg" alt="Camiseta Suiza Visitante"class="zoomable">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
