--- a/MLS.html
+++ b/MLS.html
@@ -72,6 +72,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -80,17 +85,17 @@
             <h3>Inter Miami</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/HOME.jpeg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/HOME.jpeg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/AWAY.jpg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/AWAY.jpg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/INTER MIAMI/THIRD.jpg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/THIRD.jpg" alt="Camiseta Inter Miami"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -102,7 +107,7 @@
             <h3>Los Ángeles FC</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/LOS ANGELES FC/THIRD.jpg" alt="Camiseta Los Ángeles FC">
+                    <img src="Imagenes/MLS/LOS ANGELES FC/THIRD.jpg" alt="Camiseta Los Ángeles FC"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -114,7 +119,7 @@
             <h3>Los Ángeles Galaxy</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/LOS ANGELES GALAXY/HOME.jpg" alt="Camiseta Los Ángeles Galaxy">
+                    <img src="Imagenes/MLS/LOS ANGELES GALAXY/HOME.jpg" alt="Camiseta Los Ángeles Galaxy"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -126,12 +131,12 @@
             <h3>Orlando</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/ORLANDO/HOME.jpg" alt="Camiseta Orlando">
+                    <img src="Imagenes/MLS/ORLANDO/HOME.jpg" alt="Camiseta Orlando"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/ORLANDO/AWAY (24).jpg" alt="Camiseta Orlando">
+                    <img src="Imagenes/MLS/ORLANDO/AWAY (24).jpg" alt="Camiseta Orlando"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
