--- a/RetroLaLiga.html
+++ b/RetroLaLiga.html
@@ -77,6 +77,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -85,12 +90,12 @@
             <h3>Athletic Club</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/HOME 95-97.jpg" alt="Athletic Club Local 95-97">
+                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/HOME 95-97.jpg" alt="Athletic Club Local 95-97"class="zoomable">
                     <h4>Camiseta Local 95-96</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/AWAY 2011-12.jpg" alt="Camiseta Athletic Club Visitante">
+                    <img src="Imagenes/RETRO/LA LIGA/ATHLETIC CLUB/AWAY 2011-12.jpg" alt="Camiseta Athletic Club Visitante"class="zoomable">
                     <h4>Camiseta Visitante 11-12</h4>
                     <p>25€</p>
                 </div>
@@ -102,22 +107,22 @@
             <h3>Atlético de Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
                     <h4>Camiseta Local 94-95</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa"class="zoomable">
                     <h4>Camiseta Away 98-99</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 04-05</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante"class="zoomable">
                     <h4>Camiseta Local 14-15</h4>
                     <p>25€</p>
                 </div>
@@ -129,7 +134,7 @@
             <h3>Deportivo de la Coruña</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/DEPORTIVO DE LA CORUNA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/DEPORTIVO DE LA CORUNA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 99-00</h4>
                     <p>25€</p>
                 </div>
@@ -141,42 +146,42 @@
             <h3>FC Barcelona</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 96-97.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 96-97.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 96-97</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 06-07</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2012-13.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2013-14.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 13-14</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2016-17.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 16-17</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/THIRD 2016-17.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/THIRD 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 16-17</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Away 21-22</h4>
                     <p>25€</p>
                 </div>
@@ -188,12 +193,12 @@
             <h3>Málaga</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta 120 ANIVERSARIO</h4>
                     <p>25€</p>
                 </div>
@@ -205,47 +210,47 @@
             <h3>Real Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2000.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2000.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 2000</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2003-04.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2003-04.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 03-04</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2006-07.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 06-07</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2007-08.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2007-08.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 07-08</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2011-12.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2011-12.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 11-12</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2012-13.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2012-13.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2013-14.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/HOME 2013-14.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 13-14</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/THIRD 2014-15.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/THIRD 2014-15.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Alternativa 14-15</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/AWAY 2016-17.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL MADRID/AWAY 2016-17.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 16-17</h4>
                     <p>25€</p>
                 </div>
@@ -257,7 +262,7 @@
             <h3>Real Oviedo</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/REAL OVIEDO/HOME 90-91.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/REAL OVIEDO/HOME 90-91.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 90-91</h4>
                     <p>25€</p>
                 </div>
@@ -266,15 +271,15 @@
 
         <!-- sevilla  -->
         <div id="sevilla" class="equipo">
-            <h3>Real Oviedo</h3>
+            <h3>Sevilla </h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 88-89.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 88-89.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 88-89</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 93-94.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/SEVILLA/HOME 93-94.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 93-94</h4>
                     <p>25€</p>
                 </div>
@@ -286,12 +291,12 @@
             <h3>Valencia CF</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 99-00.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 99-00.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 99-00</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/VALENCIA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05"class="zoomable">
                     <h4>Camiseta Local 06-07</h4>
                     <p>25€</p>
                 </div>
