--- a/RetroOtrasLigas.html
+++ b/RetroOtrasLigas.html
@@ -71,6 +71,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -79,17 +84,17 @@
             <h3>Boca Juniors</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001.jpeg" alt="Boca Juniors Local 95-96">
+                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001.jpeg" alt="Boca Juniors Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001-02.jpeg" alt="Camiseta Boca Juniors Visitante">
+                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/HOME 2001-02.jpeg" alt="Camiseta Boca Juniors Visitante"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/AWAY 2002.jpg" alt="Camiseta Boca Juniors Alternativa">
+                    <img src="Imagenes/RETRO/OTRAS LIGAS/BOCA JUNIORS/AWAY 2002.jpg" alt="Camiseta Boca Juniors Alternativa"class="zoomable">
                     <h4>Camiseta Local 02</h4>
                     <p>25€</p>
                 </div>
@@ -101,7 +106,7 @@
             <h3>S.Lisboa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/S.LISBOA/HOME 2001-03.jpeg" alt="S.Lisboa Local 95-96">
+                    <img src="Imagenes/RETRO/OTRAS LIGAS/S.LISBOA/HOME 2001-03.jpeg" alt="S.Lisboa Local 95-96"class="zoomable">
                     <h4>Camiseta Local 01-02</h4>
                     <p>25€</p>
                 </div>
@@ -113,7 +118,7 @@
             <h3>Santos</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Santos Local 95-96">
+                    <img src="Imagenes/RETRO/OTRAS LIGAS/SANTOS/HOME 2011-2012.jpg" alt="Santos Local 95-96"class="zoomable">
                     <h4>Camiseta Local 11-12</h4>
                     <p>25€</p>
                 </div>
