--- a/RetroPremierLeague.html
+++ b/RetroPremierLeague.html
@@ -73,6 +73,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -81,17 +86,17 @@
             <h3>Arsenal</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 88-89.jpeg" alt="Arsenal Local 95-96">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 88-89.jpeg" alt="Arsenal Local 95-96"class="zoomable">
                     <h4>Camiseta Local 88-89</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 2004-05.jpg" alt="Camiseta Arsenal Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 2004-05.jpg" alt="Camiseta Arsenal Visitante"class="zoomable">
                     <h4>Camiseta Local 04-05</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 2005-06.jpg" alt="Camiseta Arsenal Alternativa">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/ARSENAL/HOME 2005-06.jpg" alt="Camiseta Arsenal Alternativa"class="zoomable">
                     <h4>Camiseta Local 05-06</h4>
                     <p>25€</p>
                 </div>
@@ -103,17 +108,17 @@
             <h3>Chelsea</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/HOME FINAL 2011-12.jpg" alt="Camiseta Chelsea Alternativa">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/HOME FINAL 2011-12.jpg" alt="Camiseta Chelsea Alternativa"class="zoomable">
                     <h4>Camiseta Local Final 11-12</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/HOME 2012-13.jpeg" alt="Chelsea Local 95-96">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/HOME 2012-13.jpeg" alt="Chelsea Local 95-96"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/AWAY 2012-13.jpg" alt="Camiseta Chelsea Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/CHELSEA/AWAY 2012-13.jpg" alt="Camiseta Chelsea Visitante"class="zoomable">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
@@ -125,37 +130,37 @@
             <h3>Liverpool</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/THIRD 90-91.jpg" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/THIRD 90-91.jpg" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Alternativa 90-91</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 93-94.jpg" alt="Liverpool Local 95-96">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 93-94.jpg" alt="Liverpool Local 95-96"class="zoomable">
                     <h4>Camiseta Local 93-94</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/AWAY 93-94.jpeg" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/AWAY 93-94.jpeg" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Visitante 93-94</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 95-96.jpeg" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 95-96.jpeg" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Local 95-96</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 96-97.jpeg" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 96-97.jpeg" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Local 96-97</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/AWAY 96-97.png.webp" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/AWAY 96-97.png.webp" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Away 96-97</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 2005-06.jpg" alt="Camiseta Liverpool Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/LIVERPOOL/HOME 2005-06.jpg" alt="Camiseta Liverpool Visitante"class="zoomable">
                     <h4>Camiseta Local 05-06</h4>
                     <p>25€</p>
                 </div>
@@ -167,12 +172,12 @@
             <h3>Manchester City</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER CITY/HOME 99-00.jpeg" alt="Manchester City Local 95-96">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER CITY/HOME 99-00.jpeg" alt="Manchester City Local 95-96"class="zoomable">
                     <h4>Camiseta Local 99-00</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER CITY/HOME 2011-12.jpeg" alt="Camiseta Manchester City Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER CITY/HOME 2011-12.jpeg" alt="Camiseta Manchester City Visitante"class="zoomable">
                     <h4>Camiseta Local 11-12</h4>
                     <p>25€</p>
                 </div>
@@ -184,17 +189,17 @@
             <h3>Manchester United</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/HOME 06-07.png" alt="Camiseta Manchester United Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/HOME 06-07.png" alt="Camiseta Manchester United Visitante"class="zoomable">
                     <h4>Camiseta Local 06-07</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/HOME 2008-09.jpg" alt="Manchester United Local 95-96">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/HOME 2008-09.jpg" alt="Manchester United Local 95-96"class="zoomable">
                     <h4>Camiseta Local 08-09</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/THIRD 2008-09.jpg" alt="Camiseta Manchester United Visitante">
+                    <img src="Imagenes/RETRO/PREMIER LEAGUE/MANCHESTER UNITED/THIRD 2008-09.jpg" alt="Camiseta Manchester United Visitante"class="zoomable">
                     <h4>Camiseta Alternativa 08-09</h4>
                     <p>25€</p>
                 </div>
