--- a/RetroSerieA.html
+++ b/RetroSerieA.html
@@ -74,6 +74,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -82,17 +87,17 @@
     <h3>Fiorentina</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 92-93.jpg" alt="Fiorentina Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 92-93.jpg" alt="Fiorentina Local 95-96"class="zoomable">
             <h4>Camiseta Local 92-93</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 98-99.jpg" alt="Camiseta Fiorentina Visitante">
+            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 98-99.jpg" alt="Camiseta Fiorentina Visitante"class="zoomable">
             <h4>Camiseta Local 98-99</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 99-00.jpg" alt="Camiseta Fiorentina Alternativa">
+            <img src="Imagenes/RETRO/SERIE A/FIORENTINA/HOME 99-00.jpg" alt="Camiseta Fiorentina Alternativa"class="zoomable">
             <h4>Camiseta Local 99-00</h4>
             <p>25€</p>
         </div>
@@ -104,17 +109,17 @@
     <h3>Inter Milan</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/HOME 97-98.jpg" alt="Inter Milan Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/HOME 97-98.jpg" alt="Inter Milan Local 95-96"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/THIRD 97-98.jpg" alt="Camiseta Inter Milan Visitante">
+            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/THIRD 97-98.jpg" alt="Camiseta Inter Milan Visitante"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/AWAY 2010-11.jpg" alt="Camiseta Inter Milan Alternativa">
+            <img src="Imagenes/RETRO/SERIE A/INTER MILAN/AWAY 2010-11.jpg" alt="Camiseta Inter Milan Alternativa"class="zoomable">
             <h4>Camiseta Away 10-11</h4>
             <p>25€</p>
         </div>
@@ -126,22 +131,22 @@
     <h3>Juventus</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 97-98.jpg" alt="Juventus Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 97-98.jpg" alt="Juventus Local 95-96"class="zoomable">
             <h4>Camiseta Away 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 97-98.jpg" alt="Camiseta Juventus Visitante">
+            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 97-98.jpg" alt="Camiseta Juventus Visitante"class="zoomable">
             <h4>Camiseta Local 97-98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 2014-15.jpg" alt="Camiseta Juventus Alternativa">
+            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/HOME 2014-15.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
             <h4>Camiseta Local 14-15</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 2015-16.jpg" alt="Camiseta Juventus Alternativa">
+            <img src="Imagenes/RETRO/SERIE A/JUVENTUS/AWAY 2015-16.jpg" alt="Camiseta Juventus Alternativa"class="zoomable">
             <h4>Camiseta Away 15-16</h4>
             <p>25€</p>
         </div>
@@ -153,12 +158,12 @@
     <h3>Milan</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/MILAN/HOME 2006-07.jpg" alt="Milan Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/MILAN/HOME 2006-07.jpg" alt="Milan Local 95-96"class="zoomable">
             <h4>Camiseta Local 06-07</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/MILAN/AWAY FINAL 2006-07.jpg" alt="Camiseta Milan Visitante">
+            <img src="Imagenes/RETRO/SERIE A/MILAN/AWAY FINAL 2006-07.jpg" alt="Camiseta Milan Visitante"class="zoomable">
             <h4>Camiseta Away Final 06-07</h4>
             <p>25€</p>
         </div>
@@ -170,7 +175,7 @@
     <h3>Napoli</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/NAPOLI/HOME 87-88.jpeg" alt="Napoli Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/NAPOLI/HOME 87-88.jpeg" alt="Napoli Local 95-96"class="zoomable">
             <h4>Camiseta Local 87-88</h4>
             <p>25€</p>
         </div>
@@ -182,7 +187,7 @@
     <h3>Roma</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/RETRO/SERIE A/ROMA/HOME 98-99.jpeg" alt="Roma Local 95-96">
+            <img src="Imagenes/RETRO/SERIE A/ROMA/HOME 98-99.jpeg" alt="Roma Local 95-96"class="zoomable">
             <h4>Camiseta Local 98-99</h4>
             <p>25€</p>
         </div>
