--- a/eredivise.html
+++ b/eredivise.html
@@ -70,6 +70,11 @@
         </div>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
@@ -78,17 +83,17 @@
             <h3>Ajax</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/AJAX/HOME.jpg" alt="Camiseta Ajax">
+                    <img src="Imagenes/EREDIVISE/AJAX/HOME.jpg" alt="Camiseta Ajax"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/AJAX/AWAY (29).jpg" alt="Camiseta Ajax">
+                    <img src="Imagenes/EREDIVISE/AJAX/AWAY (29).jpg" alt="Camiseta Ajax"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/AJAX/THIRD.jpg" alt="Camiseta Ajax">
+                    <img src="Imagenes/EREDIVISE/AJAX/THIRD.jpg" alt="Camiseta Ajax"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -100,17 +105,17 @@
             <h3>Feyenoord</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/FEYENOORD/HOME (17).jpg" alt="Camiseta Feyenoord">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/HOME (17).jpg" alt="Camiseta Feyenoord"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/FEYENOORD/AWAY.jpg" alt="Camiseta Feyenoord">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/AWAY.jpg" alt="Camiseta Feyenoord"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/FEYENOORD/THIRD (16).jpg" alt="Camiseta Feyenoord">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/THIRD (16).jpg" alt="Camiseta Feyenoord"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
