--- a/primeiraLiga.html
+++ b/primeiraLiga.html
@@ -70,6 +70,11 @@
             <a href="#sporting-lisboa">Sporting de Lisboa</a>
         </div>
     </section>
+
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
     
 
     <!-- Sección de productos por equipo -->
@@ -80,17 +85,17 @@
             <h3>Benfica</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/HOME (18).jpg" alt="Camiseta Benfica">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/HOME (18).jpg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/AWAY.jpeg" alt="Camiseta Benfica">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/AWAY.jpeg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/THIRD (17).jpg" alt="Camiseta Benfica">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/THIRD (17).jpg" alt="Camiseta Benfica"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -102,17 +107,17 @@
             <h3>Oporto</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/HOME.jpg" alt="Camiseta Oporto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/HOME.jpg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/AWAY.jpeg" alt="Camiseta Oporto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/AWAY.jpeg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/THIRD.jpeg" alt="Camiseta Oporto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/THIRD.jpeg" alt="Camiseta Oporto"class="zoomable">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -124,12 +129,12 @@
             <h3>Sporting de Lisboa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/HOME.jpeg" alt="Camiseta Sporting de Lisboa">
+                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/HOME.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/AWAY.jpeg" alt="Camiseta Sporting de Lisboa">
+                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/AWAY.jpeg" alt="Camiseta Sporting de Lisboa"class="zoomable">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
